# QppJS

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  lsan_suppressions.txt
.claude/: settings.json
.claude/agents/: design-agent.md  es-spec.md  implementation-agent.md  perf-agent.md  quickjs-research.md  review-agent.md  testing-agent.md
.claude/rules/: code-style.md  testing.md
.claude/skills/format/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/perf-review/: SKILL.md
cmake/: CompilerFlags.cmake  Dependencies.cmake  Options.cmake
docs/: build-system-refactor-mapping.md
docs/es2021/: 01-data-types.md  02-abstract-operations.md  03-execution-contexts.md  04-syntax-and-semantics.md  05-built-in-objects.md  README.md
docs/perf/: 001-all.md
docs/plans/: 00-roadmap.md  01-current-status-detail.md  01-current-status.md  02-next-phase.md
docs/quickjs/: 01-value-representation.md  02-runtime-context.md  03-atom-string.md  04-object-shape.md  05-garbage-collection.md  06-bytecode.md  07-lexer.md  08-parser-compiler.md  09-interpreter.md  10-closure-scope.md  11-generator-async.md  12-module-system.md  13-promise-job-queue.md  14-builtin-objects.md  README.md
include/qppjs/base/: error.h  result.h
include/qppjs/debug/: format.h
include/qppjs/frontend/: ast.h  ast_dump.h  lexer.h  parser.h  token.h
include/qppjs/platform/: arch.h  compiler.h
include/qppjs/runtime/: completion.h  environment.h  gc_heap.h  interpreter.h  job_queue.h  js_function.h  js_object.h  module_loader.h  module_record.h  native_errors.h  promise.h  rc_object.h  value.h
include/qppjs/vm/: bytecode.h  compiler.h  opcode.h  vm.h
scripts/: build.sh  build_debug.sh  build_release.sh  build_test.sh  clean.sh  coverage.sh  qppjs.py  run_test262.py  run_ut.sh
src/: CMakeLists.txt
src/base/: error.cpp
src/debug/: format.cpp
src/frontend/: ast_dump.cpp  lexer.cpp  parser.cpp  token.cpp
src/main/: main.cpp
src/runtime/: environment.cpp  gc_heap.cpp  interpreter.cpp  job_queue.cpp  js_function.cpp  js_object.cpp  module_loader.cpp  module_record.cpp  native_errors.cpp  promise.cpp  value.cpp
src/vm/: compiler.cpp  vm.cpp
tests/: CMakeLists.txt
tests/test262/: harness.js
tests/unit/: array_test.cpp  ast_dump_test.cpp  ast_test.cpp  async_order_test.cpp  console_test.cpp  env_rc_lifecycle_test.cpp  error_test.cpp  function_builtin_test.cpp  function_test.cpp  gc_heap_test.cpp  interpreter_control_flow_edge_test.cpp  interpreter_control_flow_test.cpp  interpreter_error_test.cpp  interpreter_test.cpp  lexer_test.cpp  module_test.cpp  number_math_test.cpp  object_builtin_test.cpp  object_test.cpp  parser_module_test.cpp  parser_test.cpp  promise_test.cpp  proto_test.cpp  string_test.cpp  tla_test.cpp  token_test.cpp  update_expression_test.cpp  value_nanboxing_test.cpp  value_test.cpp  vm_control_flow_edge_test.cpp  vm_control_flow_test.cpp  vm_error_test.cpp  vm_test.cpp
